--- a/web/src/app/globals.css
+++ b/web/src/app/globals.css
@@ -28,11 +28,29 @@ body {
 input,
 textarea,
 select {
-  color: #171717;
+  color: #171717 !important;
+  -webkit-text-fill-color: #171717;
+  caret-color: #171717;
   background-color: #ffffff;
 }
 
 input::placeholder,
 textarea::placeholder {
-  color: #737373;
+  color: #737373 !important;
+  -webkit-text-fill-color: #737373;
+}
+
+select option {
+  color: #171717;
+  background-color: #ffffff;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus {
+  -webkit-text-fill-color: #171717 !important;
+  box-shadow: 0 0 0 1000px #ffffff inset;
 }
